<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.screens.MainActivity">

    <requestFocus/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_movie" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/movie_name"
        android:inputType="textPersonName"
        android:lines="1" />

    <Button
        android:id="@+id/btnGetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTitle"
        android:layout_marginTop="8dp"
        android:text="@string/get_movie_info" />

    <Button
        android:id="@+id/btnDetails"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnGetData"
        android:layout_toEndOf="@+id/btnGetData"
        android:text="@string/show_details" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="367dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGetData">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="18sp" />
    </ScrollView>

</RelativeLayout>
